refactor: copy of website, but jekyll way

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: DEVmachine Blog
+title: DEVmachine
 # front matter tells Jekyll to process Liquid
 ---
-<h1>{{ "Hello World !" }}
+<h1>{{ "Hello World !" }}</h1>
