feat(references): refacto

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ css: home
         </div>
     </div>
 </section>
-<!-- fondateurs -->
+<!-- fondateurs
 <section id="fondateurs" class="bg-light">
     <div class="container">
         <div class="row">
@@ -306,11 +306,11 @@ css: home
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 {% include references.html %}
 
-<section id="joinus" class="bg-light">
+<section id="joinus">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
