chore: add blog introduction

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ css: blog
           <div class="intro-bg">
             <h1 class="section-heading">Bienvenue sur le blog de DEVmachine</h1>
             <p>
-              Vous trouverez ici des ressources concernant les actualités de développement de notre équipe, mais aussi sur des sujets plus généralistes...
+              Vous trouverez ici des ressources concernant les actualités de développement de l'équipe, et aussi des sujets plus généralistes...
             </p>
           </div>
         </div>
