Ajout migrations technologiques

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ title: DEVmachine
                         </p>
                         <p class="text-muted">- Développements spécifiques</p>
                         <p class="text-muted">- MVP / PoC</p>
+                        <p class="text-muted">- Migrations technologiques</p>
                     </div>
                 </div>
             </div>
