Ajout migrations technologiques

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ css: home
                         </p>
                         <p class="text-muted">- Développements spécifiques</p>
                         <p class="text-muted">- MVP / PoC</p>
+                        <p class="text-muted">- Migrations technologiques</p>
                     </div>
                 </div>
             </div>
