feat: continue index + footer

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@ title: DEVmachine
                     <a href="/dm">Découvrir DEVmachine</a>
                 </button>
             </div>
-            <div class="col-md-6 col-sm-12">
-                <img alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+            <div class="col-md-6 col-sm-12 shape-container">
+                <div class="image-container">
+                    <img alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+                </div>
+                <div class="bg-orange"></div>
             </div>
         </div>
     </div>
@@ -78,7 +81,11 @@ title: DEVmachine
 
 <!-- IMAGES -->
 <section class="images">
-    <div class="blue-img-container"></div>
+    <div class="shape-container bg-blue"></div>
+    <div class="img-container">
+        <img alt="Equipe DEVmachine" src="/assets/images/website/dm-group.jpg" />
+    </div>
+    <div class="shape-container bg-pink"></div>
 </section>
 
 <!-- B2B / B2C -->
@@ -86,19 +93,142 @@ title: DEVmachine
     <div class="container">
         <div class="row">
             <h1 class="ml-auto mr-auto section-heading">Construction de solutions B2B / B2C</h1>
-            <h2 class="m-auto">Une vision 360° de l’usage à l’exploitation</h2>
+            <h2 class="ml-auto mr-auto section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
         </div>
         <div class="col-12 d-flex align-items-center mt-5">
             <ul class="col-8 d-inline-block">
-                <li><i class="fa-solid fa-circle-arrow-right"></i>Définition de solution logicielle / définition de produit</li>
-                <li>UX/UI</li>
-                <li>Architecture</li>
-                <li>Développement logiciel</li>
-                <li>Déploiement</li>
-                <li>Infogérance</li>
+                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Définition de solution logicielle / définition de produit</li>
+                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>UX/UI</li>
+                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Architecture</li>
+                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Développement logiciel</li>
+                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Déploiement</li>
+                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Infogérance</li>
             </ul>
             <div class="col-4 d-inline-block">
                 <img class="w-50" alt="" src="/assets/images/website/dm-group.jpg"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="container">
+    <hr />
+</div>
+
+<!-- PRESTATIONS -->
+<section class="prestations">
+    <div class="container">
+        <div class="row">
+            <h1 class="ml-auto mr-auto section-heading">Nos prestations</h1>
+            <h2 class="ml-auto mr-auto section-subheading">Une réponse pour chacune de vos questions</h2>
+        </div>
+        <div class="questions">
+            <div class="question-item-container">
+                <div class="question-item">
+                    <p>J’ai une idée mais je ne sais pas comment exprimer mon besoin</p>
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </div>
+            </div>
+            <div class="question-item-container">
+                <div class="question-item float-right">
+                    <p>Je souhaite désengorger ma dette technique, challenger ma stack technique</p>
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </div>
+            </div>
+            <div class="question-item-container">
+                <div class="question-item">
+                    <p>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</p>
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </div>
+            </div>
+            <div class="question-item-container">
+                <div class="question-item float-right">
+                    <p>Je souhaite faire développer ou faire évoluer une solution</p>
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </div>
+            </div>
+            <div class="question-item-container">
+                <div class="question-item">
+                    <p>Je souhaite renforcer mon équipe de développement</p>
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </div>
+            </div>
+            <div class="question-item-container">
+                <div class="question-item float-right">
+                    <p>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</p>
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </div>
+            </div>
+        </div>
+        <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
+            <a href="/dm">Parcourir nos prestations de services</a>
+            <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </button>
+    </div>
+    <!-- IMAGE A DROITE -->
+    <div class="img-container">
+        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+    </div>
+</section>
+
+<!-- SAVOIR-FAIRE -->
+
+<section class="savoir-faire">
+    <div class="container">
+        <div class="row">
+            <h1 class="ml-auto mr-auto section-heading">Nos savoir-faire</h1>
+            <h2 class="ml-auto mr-auto section-subheading">Compétences et soft skills</h2>
+        </div>
+        <div class="col-12 skill-items">
+            <div class="col-lg-6 col-md-12 skill-item">
+                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+                <h3>Des compétences</h3>
+                <p>Majoritairement techniques</p>
+            </div>
+            <div class="col-lg-6 col-md-12 skill-item">
+                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+                <h3>Des outils</h3>
+                <p>Au service de la productivité des équipes</p>
+            </div>
+            <div class="col-lg-6 col-md-12 skill-item">
+                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+                <h3>Des pratiques agiles</h3>
+                <p>Inspirées de Kanban et de Scrum</p>
+            </div>
+            <div class="col-lg-6 col-md-12 skill-item">
+                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+                <h3>Un état d’esprit individuel et collectif</h3>
+                <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
+            </div>
+        </div>
+        <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center mb-5">
+            <a href="/dm">Parcourir nos prestations de services</a>
+            <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </button>
+    </div>
+</section>
+
+<!-- EN SAVOIR PLUS -->
+<section class="savoir-plus mt-5 mb-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="svg-container">
+                    <!-- <object
+                        data="/assets/images/website/savoir-plus/circle_shape.svg"
+                        width="300"
+                        height="250"
+                        type="image/svg+xml"
+                    /> -->
+                </div>
+                <img class="w-50" alt="" src="/assets/images/website/savoir-plus/julien-dos.jpg"/>
+            </div>
+            <div class="col-6">
+                <h2>En savoir plus sur DEVmachine</h2>
+                <p>Co-construction, RSE, locaux, équipe, etc...</p>
+                <button type="button" class="dm-btn dm-btn-orange">
+                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                </button>
             </div>
         </div>
     </div>
