feat: fix + dm page continue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: DEVmachine
 # front matter tells Jekyll to process Liquid
 ---
 <!-- INTRO -->
-<section class="intro">
+<section id="index-intro">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
@@ -24,7 +24,7 @@ title: DEVmachine
             </div>
             <div class="col-md-6 col-sm-12 shape-container">
                 <div class="image-container">
-                    <img alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+                    <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
                 </div>
                 <div class="bg-orange"></div>
             </div>
@@ -33,7 +33,7 @@ title: DEVmachine
 </section>
 
 <!-- PILIERS -->
-<section class="piliers">
+<section id="index-piliers">
     <div class="container">
         <div class="row d-flex justify-content-center">
             <h1 class="section-heading">Piliers de notre organisation et<br>des services rendus à nos clients</h1>
@@ -80,7 +80,7 @@ title: DEVmachine
 </section>
 
 <!-- IMAGES -->
-<section class="images">
+<section id="index-images">
     <div class="shape-container bg-blue"></div>
     <div class="img-container">
         <img alt="Equipe DEVmachine" src="/assets/images/website/dm-group.jpg" />
@@ -89,14 +89,14 @@ title: DEVmachine
 </section>
 
 <!-- B2B / B2C -->
-<section class="b2b">
+<section id="index-b2b">
     <div class="container">
         <div class="row">
             <h1 class="ml-auto mr-auto section-heading">Construction de solutions B2B / B2C</h1>
             <h2 class="ml-auto mr-auto section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
         </div>
         <div class="col-12 d-flex align-items-center mt-5">
-            <ul class="col-8 d-inline-block">
+            <ul class="arrow-list">
                 <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Définition de solution logicielle / définition de produit</li>
                 <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>UX/UI</li>
                 <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Architecture</li>
@@ -116,7 +116,7 @@ title: DEVmachine
 </div>
 
 <!-- PRESTATIONS -->
-<section class="prestations">
+<section id="index-prestations">
     <div class="container">
         <div class="row">
             <h1 class="ml-auto mr-auto section-heading">Nos prestations</h1>
@@ -165,7 +165,7 @@ title: DEVmachine
             <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </button>
     </div>
-    <!-- IMAGE A DROITE -->
+    <!-- IMAGE FLEUR A DROITE -->
     <div class="img-container">
         <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
     </div>
@@ -173,7 +173,7 @@ title: DEVmachine
 
 <!-- SAVOIR-FAIRE -->
 
-<section class="savoir-faire">
+<section id="index-savoir-faire">
     <div class="container">
         <div class="row">
             <h1 class="ml-auto mr-auto section-heading">Nos savoir-faire</h1>
@@ -209,7 +209,7 @@ title: DEVmachine
 </section>
 
 <!-- EN SAVOIR PLUS -->
-<section class="savoir-plus mt-5 mb-5">
+<section id="index-savoir-plus mt-5 mb-5">
     <div class="container">
         <div class="row">
             <div class="col-6">
