--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -27,3 +27,64 @@ title: DEVmachine
     </div>
   </div>
 </section>
+
+<section id="dm-force" class="pt-5 pb-5">
+  <div class="container">
+    <div class="row">
+      <h1 class="ml-auto mr-auto section-heading">La force du collectif</h1>
+      <h2 class="ml-auto mr-auto section-subheading">En écho à nos prestations que nous réalisons en équipe, nous construisons également DEVmachine en équipe.</h2>
+    </div>
+
+    <div class="row">
+      <p class="text-orange ml-auto mr-auto mt-3">3 exemples pour illustrer :</p>
+    </div>
+
+    <div class="row align-items-center">
+      <div class="col-8">
+        <h2>La co-construction</h2>
+        <p>Nous enrichissons DEVmachine tous ensemble de façon itérative.</p>
+        <p>Tous les trimestres, nous nous réunissons par petits groupes pour faire avancer DEVmachine dans ses pratiques sur 5 thématiques majeures :</p>
+        <ul class="arrow-list">
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Vie d’agence</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>RH/recrutement</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>RSE</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Marketing / Communication</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Vie extra-professionnelle (dit “Comité des Fêtes”)</li>
+        </ul>
+      </div>
+      <div class="col-3 offset-1">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row align-items-center">
+      <div class="col-3">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+      <div class="col-8 offset-1">
+        <h2>Le CODOR - COmité D’ORientation</h2>
+        <p class="text-justify">Tous les semestres, le Comité d’Orientation réunit les 3 associés fondateurs et 2 représentants des salariés (auto-designés par l’équipe à chaque session) pour partager sur l’activité globale de DEVmachine, les opportunités de développement de DEVmachine, les actions à prioriser pour améliorer le quotidien et continuer à fédérer l’équipe.</p>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row align-items-center">
+      <div class="col-8">
+        <h2>Le recrutement</h2>
+        <p class="text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin de RV avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
+      </div>
+      <div class="col-3 offset-1">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+
+      <button type="button" class="dm-btn dm-btn-orange m-3 ml-auto mr-auto">
+        <a href="">Nos annonces de recrutement</a>
+        <span aria-hidden="true" class="fas fa-chevron-right"></span>
+      </button>
+
+    </div>
+  </div>
+</section>
