fix: some margin fixes

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ title: DEVmachine
 <section id="index-b2b">
     <div class="container">
         <div class="row">
-            <h1 class="ml-auto mr-auto section-heading">Construction de solutions B2B / B2C</h1>
-            <h2 class="ml-auto mr-auto section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
+            <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
+            <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
         </div>
         <div class="col-12 d-flex align-items-center mt-5">
             <ul class="arrow-list">
@@ -116,11 +116,11 @@ title: DEVmachine
 </div>
 
 <!-- PRESTATIONS -->
-<section id="index-prestations">
+<section id="index-prestations" class="pb-0">
     <div class="container">
         <div class="row">
-            <h1 class="ml-auto mr-auto section-heading">Nos prestations</h1>
-            <h2 class="ml-auto mr-auto section-subheading">Une réponse pour chacune de vos questions</h2>
+            <h1 class="section-heading">Nos prestations</h1>
+            <h2 class="section-subheading">Une réponse pour chacune de vos questions</h2>
         </div>
         <div class="questions">
             <div class="question-item-container">
@@ -176,8 +176,8 @@ title: DEVmachine
 <section id="index-savoir-faire">
     <div class="container">
         <div class="row">
-            <h1 class="ml-auto mr-auto section-heading">Nos savoir-faire</h1>
-            <h2 class="ml-auto mr-auto section-subheading">Compétences et soft skills</h2>
+            <h1 class="section-heading">Nos savoir-faire</h1>
+            <h2 class="section-subheading">Compétences et soft skills</h2>
         </div>
         <div class="col-12 skill-items">
             <div class="col-lg-6 col-md-12 skill-item">
@@ -209,7 +209,7 @@ title: DEVmachine
 </section>
 
 <!-- EN SAVOIR PLUS -->
-<section id="index-savoir-plus mt-5 mb-5">
+<section id="index-savoir-plus">
     <div class="container">
         <div class="row">
             <div class="col-6">
