--- a/pages/offre.html
+++ b/pages/offre.html
@@ -31,11 +31,11 @@ title: Offre
   </div>
 </section>
 
-<section id="offre-vision" class="pt-5">
+<section id="offre-vision">
   <div class="container">
     <div class="row">
-      <h1 class="ml-auto mr-auto section-heading">Vision globale du développement logiciel</h1>
-      <h2 class="ml-auto mr-auto section-subheading">Nous sécurisons l’ensemble des facettes d’un développement applicatif</h2>
+      <h1 class="section-heading">Vision globale du développement logiciel</h1>
+      <h2 class="section-subheading">Nous sécurisons l’ensemble des facettes d’un développement applicatif</h2>
     </div>
     <div class="row mt-5">
       <div>
@@ -49,10 +49,10 @@ title: Offre
   </div>
 </section>
 
-<section id="offre-prestations" class="pt-5">
+<section id="offre-prestations">
   <div class="container">
     <div class="row">
-      <h1 class="ml-auto mr-auto section-heading">Prestations de services</h1>
+      <h1 class="section-heading">Prestations de services</h1>
     </div>
     <div class="row col-lg-10 offset-lg-1 col-md-12">
       <p class="impots mt-3">En regard à ses compétences et expériences, <b>DEVmachine est agréée CII</b> (Crédit Impôt Innovation) pour les années 2021 à 2025.<br/>Ce dispositif permet à nos clients de bénéficier de <b>20% de crédit d’impôt</b> sur les sociétés pour les dépenses engagées dans les prestations que nous réalisons pour eux.</p>
@@ -183,10 +183,10 @@ title: Offre
   </div>
 </section>
 
-<section id="offre-mise-oeuvre" class="pt-5 pb-5">
+<section id="offre-mise-oeuvre">
   <div class="container">
     <div class="row">
-      <h1 class="ml-auto mr-auto section-heading">Mise en oeuvre</h1>
+      <h1 class="section-heading">Mise en oeuvre</h1>
     </div>
 
     <div class="row">
