--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -3,7 +3,7 @@ layout: default
 permalink: /savoir-faire/
 title: Savoir Faire
 ---
-<section id="savoir-faire-intro" class="intro">
+<section id="savoir-faire-intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
