--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -3,7 +3,7 @@ layout: default
 permalink: /dev-machine/
 title: DEVmachine
 ---
-<section id="dm-intro" class="intro pt-5 pb-5">
+<section id="dm-intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
@@ -28,18 +28,18 @@ title: DEVmachine
   </div>
 </section>
 
-<section id="dm-force" class="pt-5 pb-5">
+<section id="dm-force">
   <div class="container">
     <div class="row">
-      <h1 class="ml-auto mr-auto section-heading">La force du collectif</h1>
-      <h2 class="ml-auto mr-auto section-subheading">En écho à nos prestations que nous réalisons en équipe, nous construisons également DEVmachine en équipe.</h2>
+      <h1 class="section-heading">La force du collectif</h1>
+      <h2 class="section-subheading">En écho à nos prestations que nous réalisons en équipe, nous construisons également DEVmachine en équipe.</h2>
     </div>
 
     <div class="row">
       <p class="text-orange ml-auto mr-auto mt-3">3 exemples pour illustrer :</p>
     </div>
 
-    <div class="row align-items-center">
+    <div class="row align-items-center dm-item">
       <div class="col-8">
         <h2>La co-construction</h2>
         <p>Nous enrichissons DEVmachine tous ensemble de façon itérative.</p>
@@ -59,7 +59,7 @@ title: DEVmachine
 
     <hr />
 
-    <div class="row align-items-center">
+    <div class="row align-items-center dm-item">
       <div class="col-3">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
@@ -71,7 +71,7 @@ title: DEVmachine
 
     <hr />
 
-    <div class="row align-items-center">
+    <div class="row align-items-center dm-item">
       <div class="col-8">
         <h2>Le recrutement</h2>
         <p class="text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin de RV avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
@@ -79,12 +79,116 @@ title: DEVmachine
       <div class="col-3 offset-1">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
+    </div>
 
+    <div class="row mt-5">
       <button type="button" class="dm-btn dm-btn-orange m-3 ml-auto mr-auto">
         <a href="">Nos annonces de recrutement</a>
         <span aria-hidden="true" class="fas fa-chevron-right"></span>
       </button>
-
     </div>
   </div>
+</section>
+
+
+<section id="dm-servir">
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Servir et promouvoir le territoire</h1>
+      <h2 class="section-subheading">DEVmachine s’est créée à Rennes, avec la ferme intention de se développer sur le territoire breton historique, d’accompagner les acteurs économiques et institutionnels bretons, et de faire valoir le savoir-faire des entreprises bretonnes.</h2>
+    </div>
+
+    <div class="row align-items-center dm-item">
+      <div class="col-3">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+      <div class="col-8 offset-1">
+        <h2>Implantés à Rennes et Lannion</h2>
+        <p class="text-justify">Aujourd’hui, nous sommes implantés sur Rennes (locaux à Cesson-Sévigné) et Lannion (en espace de co-working pour l’instant).</p>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row align-items-center dm-item">
+      <div class="col-8">
+        <h2>Des clients majoritairement bretons</h2>
+        <p class="text-justify">Nos clients sont majoritairement présents sur le territoire breton : Ille-et-Vilaine, Côtes d’Armor, Morbihan, Loire-Atlantique.</p>
+        <p>Nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
+      </div>
+      <div class="col-3 offset-1">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row align-items-center dm-item">
+      <div class="col-3">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+      <div class="col-8 offset-1">
+        <h2>Soutien aux associations et réseaux locaux</h2>
+        <p>Aujourd’hui, nous sommes implantés sur Rennes (locaux à Cesson-Sévigné) et Lannion (en espace de co-working pour l’instant).</p>
+        <ul class="arrow-list">
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Professionnels</b> : ADN’Ouest</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Territoriaux</b> : Candidature en cours à Produit En Bretagne</li>
+          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Technologiques</b> : BreizhCamp, meetup Software Craftsmanship</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="dm-rse" class="mb-5">
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Démarche RSE</h1>
+      <h2 class="section-subheading">Nous portons, depuis la création de la société, une attention particulière sur la RSE. Les actions que nous avons déjà engagées sur les 3 thèmes de la RSE sont les suivantes :</h2>
+    </div>
+
+    <div class="rse-item" id="social">
+      <div>
+        <p class="title">Social</p>
+      </div>
+
+      <div class="d-flex justify-content-between rse-subitems">
+        <p>Conditions de travail</p>
+        <p>Partage des richesses</p>
+        <p>Santé psychologique</p>
+        <p>Développement des compétences</p>
+      </div>
+    </div>
+
+    <div class="rse-item" id="environnemental">
+      <div class="d-flex">
+        <p class="title mb-0 mr-3">Environnemental</p>
+        <img class="leaf" alt="" src="/assets/images/website/dev-machine/leaf.svg" />
+      </div>
+      <div class="d-flex justify-content-between rse-subitems">
+        <p class="text-orange">Limitation des temps de trajets et de la circulation automobile</p>
+        <p>Consommation vertueuse / tri</p>
+        <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
+      </div>
+    </div>
+
+    <div class="rse-item" id="societal">
+      <div class="d-flex">
+        <p class="title mb-0 mr-3">Sociétal</p>
+        <img class="leaf" alt="" src="/assets/images/website/dev-machine/leaf.svg" />
+      </div>
+      <div class="d-flex justify-content-between rse-subitems">
+        <p>DEVmachine fait appel à l’ESAT Utopi</p>
+        <p>DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
+      </div>
+    </div>
+  </div>
+
+  <ul class="arrow-list">
+    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
+    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
+    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
+    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Cuisine équipée pour déjeuner dans les locaux.</li>
+  </ul>
 </section>
