fix: change ul icon list

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,9 +11,9 @@ title: Contact
           <h1 class="section-heading">Contactez-nous</h1>
           <p>Nous sommes toujours ravis de répondre à vos questions !</p>
           <ul class="arrow-list">
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Une étude ou un projet que l’on pourrait accompagner ?</li>
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>L’envie de nous rejoindre ?</li>
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Ou simplement d’en savoir plus</li>
+            <li>Une étude ou un projet que l’on pourrait accompagner ?</li>
+            <li>L’envie de nous rejoindre ?</li>
+            <li>Ou simplement d’en savoir plus</li>
           </ul>
         </div>
       </div>
