--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -11,10 +11,10 @@ title: DEVmachine
           <h1 class="section-heading">En savoir plus sur DEVmachine</h1>
           <p>DEVmachine a été créée fin 2018 en partageant une vision commune sur :</p>
           <ul class="arrow-list">
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Un positionnement fort en tant qu’acteur du service numérique, que nous retrouvons dans notre offre de services et nos savoir-faire</li>
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>La nécessité de s’appuyer sur un collectif</li>
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>La nécessité de servir et promouvoir le territoire</li>
-            <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>La nécessité de développer une démarche RSE</li>
+            <li>Un positionnement fort en tant qu’acteur du service numérique, que nous retrouvons dans notre offre de services et nos savoir-faire</li>
+            <li>La nécessité de s’appuyer sur un collectif</li>
+            <li>La nécessité de servir et promouvoir le territoire</li>
+            <li>La nécessité de développer une démarche RSE</li>
           </ul>
         </div>
         <button type="button" class="dm-btn dm-btn-blue m-3">
@@ -45,11 +45,11 @@ title: DEVmachine
         <p>Nous enrichissons DEVmachine tous ensemble de façon itérative.</p>
         <p>Tous les trimestres, nous nous réunissons par petits groupes pour faire avancer DEVmachine dans ses pratiques sur 5 thématiques majeures :</p>
         <ul class="arrow-list">
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Vie d’agence</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>RH/recrutement</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>RSE</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Marketing / Communication</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Vie extra-professionnelle (dit “Comité des Fêtes”)</li>
+          <li>Vie d’agence</li>
+          <li>RH/recrutement</li>
+          <li>RSE</li>
+          <li>Marketing / Communication</li>
+          <li>Vie extra-professionnelle (dit “Comité des Fêtes”)</li>
         </ul>
       </div>
       <div class="col-3 offset-1">
@@ -131,10 +131,10 @@ title: DEVmachine
         <h2>Soutien aux associations et réseaux locaux</h2>
         <p>Aujourd’hui, nous sommes implantés sur Rennes (locaux à Cesson-Sévigné) et Lannion (en espace de co-working pour l’instant).</p>
         <ul class="arrow-list">
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Professionnels</b> : ADN’Ouest</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Territoriaux</b> : Candidature en cours à Produit En Bretagne</li>
-          <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span><b>Technologiques</b> : BreizhCamp, meetup Software Craftsmanship</li>
+          <li><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
+          <li><b>Professionnels</b> : ADN’Ouest</li>
+          <li><b>Territoriaux</b> : Candidature en cours à Produit En Bretagne</li>
+          <li><b>Technologiques</b> : BreizhCamp, meetup Software Craftsmanship</li>
         </ul>
       </div>
     </div>
@@ -186,9 +186,9 @@ title: DEVmachine
   </div>
 
   <ul class="arrow-list">
-    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
-    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
-    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
-    <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Cuisine équipée pour déjeuner dans les locaux.</li>
+    <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
+    <li>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
+    <li>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
+    <li>Cuisine équipée pour déjeuner dans les locaux.</li>
   </ul>
 </section>
