--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -34,9 +34,9 @@ title: Savoir Faire
       <h2>Qualité</h2>
       <p>Nous ne faisons aucun compromis sur la qualité de nos livrables, dans une vision court et moyen terme, pour à la fois satisfaire les utilisateurs, mais aussi permettre à nos clients de pouvoir continuer à investir dans de nouveaux services à leur apporter plutôt que dans de la correction ou de la mise à jour technique des solutions.</p>
       <ul class="arrow-list">
-        <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Nous diffusons continuellement auprès des équipes projet des bonnes pratiques de conception et de développement</li>
-        <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Merge requests</li>
-        <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Commentaires de code</li>
+        <li>Nous diffusons continuellement auprès des équipes projet des bonnes pratiques de conception et de développement</li>
+        <li>Merge requests</li>
+        <li>Commentaires de code</li>
       </ul>
     </div>
     
