--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@ title: DEVmachine
         </div>
         <div class="col-12 d-flex align-items-center mt-5">
             <ul class="arrow-list">
-                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Définition de solution logicielle / définition de produit</li>
-                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>UX/UI</li>
-                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Architecture</li>
-                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Développement logiciel</li>
-                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Déploiement</li>
-                <li><span aria-hidden="true" class="fas fa-arrow-circle-right"></span>Infogérance</li>
+                <li>Définition de solution logicielle / définition de produit</li>
+                <li>UX/UI</li>
+                <li>Architecture</li>
+                <li>Développement logiciel</li>
+                <li>Déploiement</li>
+                <li>Infogérance</li>
             </ul>
             <div class="col-4 d-inline-block">
                 <img class="w-50" alt="" src="/assets/images/website/dm-group.jpg"/>
