feat: dynamic navigation

--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -2,6 +2,7 @@
 layout: default
 permalink: /recrutement/
 title: Recrutement
+order: 6
 ---
 <section id="recrutement-intro">
   <div class="container">
