--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 permalink: /savoir-faire/
-title: Savoir Faire
+title: Savoir-Faire
+order: 2
 ---
 <section id="savoir-faire-intro">
   <div class="container">
