feat: main bg + Julien photo

--- a/index.html
+++ b/index.html
@@ -213,18 +213,13 @@ exclude-nav: true
 <section id="index-savoir-plus">
     <div class="container">
         <div class="row">
-            <div class="col-6">
-                <div class="svg-container">
-                    <!-- <object
-                        data="/assets/images/website/savoir-plus/circle_shape.svg"
-                        width="300"
-                        height="250"
-                        type="image/svg+xml"
-                    /> -->
+            <div class="col-lg-6 text-center">
+                <div class="img-container">
+                    <img class="circle" alt="" src="/assets/images/website/savoir-plus/circle_shape.svg">
+                    <img class="julien" alt="" src="/assets/images/website/savoir-plus/julien-dos.jpg"/>
                 </div>
-                <img class="w-50" alt="" src="/assets/images/website/savoir-plus/julien-dos.jpg"/>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 text-center">
                 <h2>En savoir plus sur DEVmachine</h2>
                 <p>Co-construction, RSE, locaux, équipe, etc...</p>
                 <button type="button" class="dm-btn dm-btn-orange">
